<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BkEmu</string>
    <string name="fps_string">%d FPS</string>
    <string name="menu_toggle_keyboard">On-screen keyboard</string>
    <string name="menu_toggle_joystick">On-screen joystick</string>
    <string name="menu_toggle_screen_mode">Screen mode</string>
    <string name="menu_reset">Reset computer</string>
    <string name="menu_change_model">Change model</string>
    <string name="menu_select_model">Select model</string>
    <string name="menu_open_image">Open .BIN image</string>
    <string name="menu_disk_manager">Disk manager</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share!</string>
    <string name="menu_changelog">Changelog</string>
    <string name="dialog_disk_mount_error">Disk image mount error!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="bk_0010_monitor">BK 0010&#8211;01 (Monitor only)</string>
    <string name="bk_0010_basic">BK 0010&#8211;01 (Basic)</string>
    <string name="bk_0010_mstd">BK 0010&#8211;01 (Focal + tests)</string>
    <string name="bk_0010_kngmd">BK 0010&#8211;01 (KNGMD)</string>
    <string name="bk_0011m_mstd">BK 0011M (MSTD)</string>
    <string name="bk_0011m_kngmd">BK 0011M (KNGMD)</string>
    <string name="desc_erase">Erase</string>
    <string name="desc_collapse">Collapse</string>
    <string name="desc_expand">Expand</string>
    <string name="desc_shift">Low register</string>
    <string name="desc_backspace">Backspace</string>
    <string name="desc_left">Left</string>
    <string name="desc_up">Up</string>
    <string name="desc_down">Down</string>
    <string name="desc_right">Right</string>
    <string name="desc_enter">Enter</string>
    <string name="fd_label">File manager</string>
    <string name="fd_title_load">Open file (%s)</string>
    <string name="fd_title_save">Save file (%s)</string>
    <string name="fd_location">Location</string>
    <string name="fd_cant_read_dir">Can\'t read directory!</string>
    <string name="fd_cant_create_dir">Can\'t create directory</string>
    <string name="fd_new_file">New</string>
    <string name="fd_select">Select</string>
    <string name="fd_file_name">File name:</string>
    <string name="fd_save">Save</string>
    <string name="fd_create_dir">New Folder</string>
    <string name="fd_create_dir_title">New directory</string>
    <string name="fd_create_dir_label">Directory name:</string>
    <string name="fd_no_data">No Data</string>
    <string name="err">Error</string>
    <string name="exit_confirm_title">Quit emulator</string>
    <string name="exit_confirm_message">Do you really want to quit?</string>
    <string name="about_logo">BkEmu Logo</string>
    <string name="about_version">BkEmu v. %s</string>
    <string name="about_info">Emulator of 16-bit PDP-11-compatible Soviet home computers Elektronika BK-0010/11M</string>
    <string name="about_perf">Effective clock frequency: %1$.3f MHz (%2$.2f%%)</string>
    <string name="about_link">https://github.com/3cky/bkemu-android</string>
    <string name="changelog_title">What\'s new?</string>
    <string name="changelog_title_full">Changelog</string>
    <string name="changelog_show_full">Full changelog</string>
    <string name="fdd_image_a">Floppy Drive A</string>
    <string name="fdd_image_b">Floppy Drive B</string>
    <string name="fdd_image_c">Floppy Drive C</string>
    <string name="fdd_image_d">Floppy Drive D</string>
    <string name="fdd_empty">(Empty)</string>
    <string name="toast_image_load_info">Start address 0%1$o, length %2$d</string>
    <string name="toast_image_load_error">Can\'t load file \'%s\'</string>
    <string name="toast_image_save_info">File \'%s\' saved</string>
    <string name="toast_image_save_error">Can\'t save file \'%s\'</string>
</resources>
