<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/menu_toggle_screen_mode"
          android:icon="@drawable/ic_tv_white_24dp"
          android:title="@string/menu_toggle_screen_mode"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_toggle_keyboard"
          android:icon="@drawable/ic_keyboard_white_24dp"
          android:title="@string/menu_toggle_keyboard"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_open_image"
          android:title="@string/menu_open_image" />
    <item android:id="@+id/menu_disk_manager"
          android:icon="@drawable/ic_save_white_24dp"
          android:title="@string/menu_disk_manager"
          android:visible="false"
          android:enabled="false"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_change_model"
          android:title="@string/menu_change_model" />
    <item android:id="@+id/menu_reset"
          android:title="@string/menu_reset" />
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about" />
    <item android:id="@+id/menu_changelog"
          android:title="@string/menu_changelog" />
    <item android:id="@+id/menu_share"
          android:title="@string/menu_share" />
</menu>